fix on mobile and desktop whoo hooooo but not the whole thing riu[

--- a/2x4.css
+++ b/2x4.css
@@ -10,7 +10,7 @@ h1 {
 }
 img {
     position: fixed;
-    height: 37%;
+    width: 37vw;
     float: right;
 }
 .a {
